--- a/documentation/modules/ROOT/pages/chaos-environment_fr.adoc
+++ b/documentation/modules/ROOT/pages/chaos-environment_fr.adoc
@@ -9,9 +9,9 @@
 
 =  Découvrez Votre Environnement Chaos
 
-_10 MINUTE EXERCISE_
+_EXERCISE DE 10 MINUTES_
 
-En tant qu'ingénieur Chaos, vous aurez besoin d'un environnement pour déployer des applications pour évaluer.
+En tant qu'ingénieur Chaos, vous aurez besoin d'un environnement pour déployer des applications à évaluer.
 
 Dans cette section, vous explorerez OpenShift et déployerez une application en utilisant **Argo CD**.
 
@@ -24,13 +24,14 @@ image::explore-discover.png[explore-discover, 800]
 
 image::Logo-Red_Hat-OpenShift.png[Red Hat OpenShift, 300]
 
-**Red Hat® OpenShift®** permet aux entreprises de construire des architectures très agiles et évolutives avec une sécurité de cluster améliorée qui peut être déployée à n'importe quel endroit.**Red Hat® OpenShift®** propose une installation automatisée, des mises à niveau et la gestion du cycle de vie dans toute la pile de conteneurs – le système d'exploitation, https://www.openshift.com/learn/topics/kubernetes/?hsLang=en-us[Kubernetes] et les services de cluster et applications – sur tout nuage.
+**Red Hat® OpenShift®** permet aux entreprises de construire des architectures très agiles et évolutives avec une sécurité d'orchestration améliorée qui peut être déployée à n'importe quel endroit.
+
+**Red Hat® OpenShift®** propose une installation automatisée, des mises à niveau et la gestion du cycle de vie dans toute l'inventaire de conteneurs – le système d'exploitation, https://www.openshift.com/learn/topics/kubernetes/?hsLang=en-us[Kubernetes] et les services de cluster et applications – sur tout nuage.
 --
 
 ==  Connectez-vous à la console Web OpenShift
 
-OpenShift embarque avec une console web qui permettra aux utilisateurs de
-effectuer diverses tâches via un navigateur.
+OpenShift offre avec une console web qui permettra aux utilisateurs d'effectuer diverses tâches via un navigateur.
 
 `*Cliquez sur le bouton "OpenShift Console" ci-dessous*`
 
@@ -40,13 +41,11 @@ effectuer diverses tâches via un navigateur.
 image::openshift-console-button.png[OpenShift Console - Button, 300]
 
 `*Entrez votre nom d'utilisateur et votre mot de passe (user{USER_ID}/{OPENSHIFT_PASSWORD})*` et
-puis connectez-vous. Après avoir authentifié la console web, vous serez présenté avec une
+puis connectez-vous. Après avoir authentifié la console web, on vous présentera une
 liste des projets avec lesquels votre utilisateur a la permission de travailler.
 
-`*Sélectionnez 'Developer View' puis votre 'chaos-engineering{USER_ID} '*` à prendre à la page d'aperçu du projet
-qui listera tous les itinéraires, services, déploiements et pods que vous avez
-courir dans le cadre de votre projet. Il n'y a rien, mais c'est sur le point de le faire.
-changement.
+`*Sélectionnez 'Developer View' puis  'chaos-engineering{USER_ID} '*` afin d'être dirigé vers la page d'aperçu du projet,
+qui listera tous les itinéraires, services, déploiements et pods que vous avez dans le cadre de votre projet. Il n'y a rien, mais c'est sur le point de changer.
 
 image::openshift-empty-project.png[OpenShift - Empty Project, 700]
 
@@ -57,22 +56,25 @@ image::openshift-empty-project.png[OpenShift - Empty Project, 700]
 
 image::argocd-logo.png[Argo CD, 200]
 
-**OpenShift GitOps** est un service disponible sur OpenShift.**OpenShift GitOps**est un add-on OpenShift qui fournit un CD Argo et d'autres outils pour permettre aux équipes de mettre en œuvre des workflows GitOps pour la configuration des clusters et la livraison des applications.**OpenShift GitOps** est disponible en tant qu'opérateur dans l'opérateurHub et peut être installé avec une simple expérience en un clic. Une fois installé, les utilisateurs peuvent déployer des instances Argo CD en utilisant des ressources personnalisées Kubernetes.
+**OpenShift GitOps** est un service disponible sur OpenShift.
+**OpenShift GitOps** est un add-on OpenShift qui fournit une instance d'Argo CD et d'autres outils pour permettre aux équipes de mettre en œuvre des workflows GitOps pour la configuration des clusters et la livraison des applications.
+
+**OpenShift GitOps** est disponible en tant qu'opérateur dans l'opérateur hub et peut être installé avec une simple expérience en un clic. Une fois installé, les utilisateurs peuvent déployer des instances Argo CD en utilisant des ressources personnalisées Kubernetes.
 
 image::gitops-model.png[gitops-model, 500]
 --
 
 
 
-Caractéristiques CD === Argo
+=== Caractéristiques d'Argo CD
 
-* Configuration du cluster et de l'application en version Git
+* Versionner les configurations du cluster et de l'application en utilisant Git
 * Configuration de synchronisation automatique de Git aux clusters
-* Détection, visualisation et correction
-* Contrôle Granulaire sur commande de synchronisation pour déploiement complexe
-* Rollback and rollforward to any Git commit
-* Manifeste templating support (Helm, Kustomize, etc)
-* Intérêt visuel sur l'état de synchronisation et l'histoire
+* Détection d'un glissement de configuration, visualisation et correction
+* Contrôle granulaire sur commande de synchronisation pour déploiement complexe
+* Rollback et rollforward vers n'importe quel commit Git
+* Prise en charge des modèles de manifeste (Helm, Kustomize, etc)
+* Intérêt visuel sur l'état de synchronisation et l'historique
 
 image::argocd-features.png[argo features- Button, 400]
 
@@ -86,37 +88,37 @@ image::argocd-features.png[argo features- Button, 400]
 [role='params-link']
 image::openshift-gitops-button.png[OpenShift GitOps - Button^, 300]
 
-Puis `*log in as user{USER_ID}/{OPENSHIFT_PASSWORD}*`. Une fois terminé, vous serez redirigé vers la page suivante qui liste les **Argo CD Applications**.
+Puis `*log in as user{USER_ID}/{OPENSHIFT_PASSWORD}*`. Une fois terminé, vous serez redirigé vers la page suivante qui liste les **Applications Argo CD**.
 
 image::argocd-home.png[Argo CD - Home Page, 500]
 
-Une application CD **Argo** représente une instance d'application déployée dans un environnement donné. Elle est définie par deux éléments clés d'information :***source**référence à l'état désiré dans Git (répositoire, révision, chemin, environnement): **{GITOPS_WORKSHOP_GIT_URL}*****destination**référence au cluster cible et à l'espace de nom: **'chaos-engineering{USER_ID}' namespace from the current OpenShift cluster (in-cluster)**
+Une **application Argo CD** représente une instance d'application déployée dans un environnement donné. Elle est définie par deux éléments clés d'information :
 
-Le statut **Argo CD Application** est d'abord en jaune, moyen **OutOfSync** état, puisque la demande n'a pas encore été présentée
-Déployé dans l'espace-nom **'chaos-engineering{USER_ID}'**, et aucune ressource Kubernetes n'a été créée.
+* **source** référence à l'état désiré dans Git (répositoire, révision, chemin, environnement): **{GITOPS_WORKSHOP_GIT_URL}**
+* **destination** référence au cluster cible et à l'espace de nom: **'chaos-engineering{USER_ID}' du cluster OpenShift cluster (in-cluster)**
 
-== Sync/ Déployer la demande
+Le statut **Argo CD Application** est d'abord en jaune, voulant dire un état **OutOfSync**, puisque la demande n'a pas encore été déployé dans l'espace-nom **'chaos-engineering{USER_ID}'**, et aucune ressource Kubernetes n'a été créée.
 
-Pour déployer l'application, `*cliquez sur la case 'chaos-engineering{USER_ID}' puis sur 'Sync > Synchronize' '*`.
+== Syncroniser et déployer l'application
+
+Pour déployer l'application, `*cliquez sur la case 'chaos-engineering{USER_ID}' puis sur 'Sync > Synchronize'*`.
 
 image::argocd-sync.png[Argo CD - Sync Application, 900]
 
 [TIP]
 ====
- Cette tâche récupère les manifestes du répertoire Git et exécute la commande _kubectl apply_ de
-les manifestes.
+ Cette tâche récupère les manifestes du répertoire Git et exécute la commande _kubectl apply_ des manifestes.
 ====
 
-Après quelques secondes, vous devriez voir **tout en vert**. Votre demande est en cours. Vous pouvez maintenant voir ses éléments de ressources, ses journaux, ses événements et son état de santé évalué.
+Après quelques secondes, vous devriez voir **tout en vert**. Votre demande est en cours. Vous pouvez maintenant voir ses éléments de ressources, ses journaux, ses événements et son état de santé.
 
 image::argocd-synced-application.png[Argo CD - Synced Application, 600]
 
-Dans le lien:{OPENSHIFT_CONSOLE_URL}[OpenShift Web Console^, role='params-link'], à partir de la vue **Developer**,
-sélectionnez le `**chaos-engineering{USER_ID}**` à prendre à la page d'aperçu du projet.
+Dans le lien:{OPENSHIFT_CONSOLE_URL}[OpenShift Web Console^, role='params-link'], à partir de **Developer view**,
+sélectionnez le `**chaos-engineering{USER_ID}**` pour être redirigé vers la page de présentation du projet.
 
 image::openshift-app-deployed-by-argocd.png[OpenShift - Coolstore Project Deployed by Argo CD , 700]
 
 Vous pouvez voir que toutes les ressources de votre application ont été créées par Argo CD.
 
 Maintenant, vous êtes prêt à commencer avec les laboratoires !
-!
