--- a/documentation/modules/ROOT/pages/chaos-error_fr.adoc
+++ b/documentation/modules/ROOT/pages/chaos-error_fr.adoc
@@ -10,18 +10,18 @@
 
 = Expérience des chaos 2: Service non disponible
 
-_10 MINUTE PRACTICE_
+_10 MINUTES D'ENTRAÎNEMENT_
 
-Auparavant, vous avez vu combien l'impact est important sur l'application lorsqu'un petit problème de latence de réseau se produit sur un service non essentiel.
-Voyons comment la demande se produira lorsque ce même service n'est pas disponible. Pour cette deuxième expérience, nous allons tester l'hypothèse suivante:
+Auparavant, vous avez vu l'ampleur de l'impact sur l'application lorsqu'un petit problème de latence du réseau se produit sur un service non critique.
+Voyons comment l'application se comportera lorsque ce même service sera indisponible. Pour cette deuxième expérience, nous allons tester l'hypothèse suivante:
 
-_**Un service de décompte disponible ne devrait pas avoir d'incidence sur l'objectif de niveau de service (SLO) du Service de voyage**_
+_**L'indisponibilité d'un service de « remise » ne doit PAS avoir d'incidence sur l'objectif de niveau de service (SLO) du service de voyage**_
 
 ==  Définir l'état stable
 
 Comme dans le laboratoire précédent, nous garderons le même état stable
 
-**99 % des demandes sont satisfaites et servies dans les 50 ms**
+**99% des demandes sont satisfaites et servies dans les 50 ms**
 
 image::grafana-service-overview-configured-2.png[Grafana - Service Overview Configured,700]
 
@@ -33,34 +33,34 @@ Dans le {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Graph'**, 
 
 image::kiali-right-click-service.png[Kiali - Right Click Service,400]
 
-Vous serez redirigé vers la page Détails du service.
+Vous serez redirigé vers la page détails du service.
 
-`*Cliquez sur les 'Actions' Injection par défaut '*`
+`*Cliquez sur les 'Actions' 'Fault Injection'*`
 
 image::kiali-add-fault-injection.png[Kiali - Add Fault Injection,900]
 
-`*Ajouter HTTP Avorter en entrant les paramètres suivants:*`
+`*Add HTTP Abort by entering the following settings:*`
 
-.Réglages HTTP Abort
+.HTTP Abort Settings
 [%header,cols=3*]
 |===
-|Paramètre
+|Parameter
 |Value
 |Description
 
-|Add HTTP Delay
+|Add HTTP Delay 
 |**Disabled**
 |
 
-|Add HTTP Abort
+|Add HTTP Abort 
 |**Enabled**
 |
 
-|Abort Pourcentage
+|Abort Percentage
 |**10**
 |
 
-|HTTP Code d'état civil
+|HTTP Status Code
 |**503**
 |
 
@@ -72,7 +72,7 @@ image::kiali-configure-error.png[Kiali - Configure Error,300]
 
 **10% du trafic du service 'discounts' échoue avec un code HTTP 503**. Voyons maintenant l'impact de l'application.
 
-==  Analyser le résultat Chaos
+==  Analyser le résultat du chaos
 
 Dans le {GRAFANA_URL}[Chaos Engineering Dashboard], vous pouvez voir le résultat de l'expérience de chaos.
 
@@ -84,41 +84,41 @@ Vous pouvez augmenter le pourcentage d'injection d'erreur jusqu'à ce que le ser
 
 Dans le {KIALI_URL}[Kiali Console^, role='params-link'], `*mettre à jour la stratégie HTTP Abort du service 'discounts' comme suit:*`
 
-`*Ajouter HTTP Avorter en entrant les paramètres suivants:*`
+`*Ajouter HTTP Abort en entrant les paramètres suivants:*`
 
-.Réglages HTTP Abort
+.HTTP Abort Settings
 [%header,cols=3*]
 |===
-|Paramètre
+|Parameter
 |Value
 |Description
 
-|Add HTTP Delay
-|Disableduit
+|Add HTTP Delay 
+|Disabled
 |
 
-|Add HTTP Abort
+|Add HTTP Abort 
 |Enabled
 |
 
-|Abort Pourcentage
+|Abort Percentage
 |**100**
 |
 
-|HTTP Code d'état civil
-<MISSING <MISSING TTKN1147503>>
+|HTTP Status Code
+|503
 |
 
 |===
 
 image::grafana-error-fault-overview-2.png[Grafana - Error Fault Overview,900]
 
-Contrairement à l'issue de l'expérience Latency, vous dites que l'application est résiliente lorsque le service 'discounts' est complètement en panne (non disponible).
-Donc votre hypothèse est validée:
+Contrairement au résultat de l'expérience de latence, vous indiquez que l'application est résiliente lorsque le service "discounts" est complètement indisponible (indisponible).
+Donc votre hypothèse est validée :
 
-_**Les services « décomptes » non disponibles n'ont pas d'incidence sur l'objectif de niveau de service (SLO) du Service de voyage**_
+_**Les services de 'remises' non disponibles N'ONT PAS d'incidence sur l'objectif de niveau de service (SLO) du service de voyage**_
 
-== Rollback l'expérience Chaos
+== Rollback de l'expérience chaos
 
 Dans {GITOPS_URL}[Argo CD^, role='params-link'], `*cliquez sur 'Sync > Synchronize '*`.
 
