--- a/documentation/modules/ROOT/pages/chaos-latency_fr.adoc
+++ b/documentation/modules/ROOT/pages/chaos-latency_fr.adoc
@@ -10,57 +10,57 @@
 
 = Expérience de Chaos 1: Latence du réseau
 
-_30 MINUTE PRACTICE_
+_30 MINUTES DE PRATIQUE_
 
-En production, il est plus fréquent d'avoir des services lents que des services rompus. **Latence** mesure le retard entre une action et une réponse. Pour cette première expérience, nous allons tester l'hypothèse suivante:
+En production, il est plus courant d'avoir des services lents que des services cassés. **Latence** mesure le délai entre une action et une réponse. Pour cette première expérience, nous allons tester l'hypothèse suivante:
 
 _**Une petite latence de réseau ne devrait pas affecter l'objectif de niveau de service (SLO) du Service de voyage**_
 
 == Définir l'état stable
 
 
-Dans le {GRAFANA_URL}[Chaos Engineering Dashboard, role='params-link'], vous pouvez analyser les différentes métriques et définir l'État Steady pour notre expérience de chaos.
-Premièrement, `*sélectionner les variables suivantes sur le tableau de bord*`:
+Dans le {GRAFANA_URL}[Chaos Engineering Dashboard, role='params-link'], vous pouvez analyser les différentes métriques et définir le Steady State pour notre expérience du chaos.
+Tout d'abord, `*sélectionnez les variables suivantes sur le tableau de bord*`:
 
-.Paramètres de tableau de bord
+.Dashboard Settings
 [%header,cols=3*]
 |===
-|Paramètre
+|Parameter
 |Value
 |Description
 
-| Namespace
+|Namespace 
 |**chaos-engineering{USER_ID}**
 |
 
 |Service
-|**voyages.chaos-engineering{USER_ID}.svc.cluster.local**
+|**travels.chaos-engineering{USER_ID}.svc.cluster.local**
 |
 
 |===
 
 image::grafana-chaos-selection.png[Grafana - Chaos Selection,400]
 
-De la section **Namespace**, vous pouvez dire que **99% des demandes sont réussies et servies dans les 50 ms**
+Dans la section **Namespace**, vous pouvez dire que **99% des requêtes aboutissent et sont traitées dans les 50ms**
 
 image::grafana-steady-state-latency.png[Grafana - Steady State Latency,900]
 
-Donc nous allons définir cette SLO comme "état ferme".
+Nous définirons donc ce SLO comme "stable-state".
 
-`*Cliquez sur 'Aperçu du service' Edit*`
+`*Cliquez sur 'Aperçu du service' puis Edit*`
 
 image::grafana-edit-service-overview.png[Grafana - Edit Service Overview,900]
 
 Puis, `*cliquez sur l'icône 'Visualization Settings' sur la barre latérale gauche, faites défiler vers le bas pour trouver la règle 'P99 Latency (Value #D)' et saisissez les informations suivantes pour Thresholds*`
 
-Réglages des seuils de latence P99
+.P99 Latency Thresholds Settings
 [%header,cols=3*]
 |===
-|Paramètre
+|Parameter
 |Value
 |Description
 
-|
+|Thresholds 
 |**50,100**
 |
 
@@ -69,7 +69,7 @@ Réglages des seuils de latence P99
 |
 
 |Colors
-|**Green/Yellow/Red** (cliquez sur le bouton 'invert' si nécessaire)
+|**Green/Yellow/Red** (click on the 'invert' button if needed)
 |
 
 |===
@@ -78,14 +78,14 @@ image::grafana-p99-latency-threholds.png[Grafana - P99 Latency Threholds,700]
 
 `*Retourner à nouveau et trouver la règle "Success Rate (Value #E)" et entrer les informations suivantes pour Thresholds*`
 
-.Success Rate Thresholds Paramètres
+.Success Rate Thresholds Settings
 [%header,cols=3*]
 |===
-|Paramètre
+|Parameter
 |Value
 |Description
 
-|
+|Thresholds 
 |**0.95,0.99**
 |
 
@@ -94,7 +94,7 @@ image::grafana-p99-latency-threholds.png[Grafana - P99 Latency Threholds,700]
 |
 
 |Colors
-|**Red/Yellow/Green** (cliquez sur le bouton 'invert' si nécessaire)
+|**Red/Yellow/Green** (click on the 'invert' button if needed)
 |
 
 |===
@@ -107,7 +107,7 @@ image::grafana-service-overview-configured.png[Grafana - Service Overview Config
 
 `*Cliquez sur l'icône 'Disk' pour enregistrer et retourner au tableau de bord.*`
 
-== Run l'expérience Chaos
+== Exécuter l'expérience Chaos
 
 Dans le {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Graph'**, `*clic droit sur le service 'discounts' (le symbole triangle) et sélectionnez 'Details'*`
 
@@ -115,28 +115,28 @@ image::kiali-right-click-service.png[Kiali - Right Click Service,600]
 
 Vous serez redirigé vers la page Détails du service.
 
-`*Cliquez sur les 'Actions' Injection par défaut '*`
+`*Cliquez sur 'Actions' > 'Fault Injection'*`
 
 image::kiali-add-fault-injection.png[Kiali - Add Fault Injection,900]
 
-`*Ajouter HTTP Retardez en entrant les paramètres suivants:*`
+`*Ajouter HTTP Delay en entrant les paramètres suivants:*`
 
-.Paramètres de retard HTTP
+.HTTP Delay Settings
 [%header,cols=3*]
 |===
-|Paramètre
+|Parameter
 |Value
 |Description
 
-|Add HTTP Delay
+|Add HTTP Delay 
 |**Enabled**
 |
 
-|
+|Delay Percentage
 |**5**
 |
 
-|Fixed Reporté
+|Fixed Delayed
 |**1s**
 |
 
@@ -148,15 +148,15 @@ image::kiali-configure-latency.png[Kiali - Configure Latency,400]
 
 **5% du trafic du service des « comptes » a maintenant 1 seconde de retard. **
 
-==  Analyser le résultat Chaos
+==  Analyser le résultat du Chaos
 
-Voyons maintenant l'impact de l'application.
+Voyons maintenant l'impact sur l'application.
 
-Dans le {GRAFANA_URL}[Chaos Engineering Dashboard], vous pouvez voir le résultat de l'expérience de chaos.
+Dans {GRAFANA_URL}[Chaos Engineering Dashboard], vous pouvez voir le résultat de l'expérience de chaos.
 
 image::grafana-latency-fault-overview.png[Grafana - Latency Fault Overview,900]
 
-Depuis le panel **'Service Aperçu'** ou **'Request Durée'** pour le service 'voyages', vous pouvez dire ce qui suit sur la petite latence réseau basée sur notre hypothèse:
+Dans le panneau **'Service Overview'** ou **'Request Duration'** pour le service 'voyages', vous pouvez dire ce qui suit sur la petite latence du réseau en fonction de notre hypothèse:
 
 - il n'y a pas d'impact sur le taux de réussite des demandes globales (100%)
 - il y a un impact énorme sur la performance de l'application.
@@ -165,17 +165,17 @@ En effet, seulement 1 seconde de retard sur 5% du trafic d'un service à charge 
 
 image::grafana-latency-fault-details.png[Grafana - Latency Fault Details,900]
 
-En conclusion, vous pouvez dire **l'application n'est pas résiliente à une petite latence réseau**. Pour réduire ou réparer ce phénomène, vous pouvez configurer l'autoscaling ou mettre en place un mécanisme de cache dans les différents services des applications.
+En conclusion, vous pouvez dire ** que l'application n'est pas résistante à une petite latence du réseau **. Pour réduire ou corriger ce phénomène, vous pouvez configurer l'autoscaling ou implémenter un mécanisme de cache sur les différents services des applications.
 
 == Améliorer la résilience
 
-Pour contenir cette propagation de latence, vous allez appliquer le modèle *Retry* à tous les services appelant les services différés.
+Pour contenir cette propagation de latence, vous allez appliquer le pattern *Retry* à tous les services appelant les services 'discounts' retardés.
 
-Les entrées peuvent améliorer la résilience de l'application contre des problèmes transscientifiques comme un service ou un réseau temporairement surchargé comme nous simulons dans notre expérience.
+Les nouvelles tentatives peuvent améliorer la résilience de l'application contre les problèmes transitoires tels qu'un service ou un réseau temporairement surchargé, comme nous le simulons dans notre expérience.
 
-Au lieu de manquer directement ou d'attendre trop longtemps, nous pourrions réessayer N nombre de fois pour obtenir la sortie souhaitée avec le temps de réponse souhaité avant de considérer comme échoué.
+Au lieu d'échouer directement ou d'attendre trop longtemps, nous pourrions réessayer N fois pour obtenir la sortie souhaitée avec le temps de réponse souhaité avant de considérer comme ayant échoué.
 
-`*Configurer le modèle Retry pour les services suivants*`
+`*Configurer le modèle de nouvelle tentative pour les services suivants*`
 
 [tabs]
 ====
@@ -184,20 +184,20 @@ cars::
 --
 Dans le {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Services**, `*cliquez sur le service 'cars' > Actions' >'Request Timeouts '*`
 
-`*Ajouter HTTP Entrée en entrant les paramètres suivants:*`
+`*Ajouter HTTP Retry en entrant les paramètres suivants:*`
 
-.Réglages de rentrée HTTP
+.HTTP Retry Settings
 [%header,cols=3*]
 |===
-|Paramètre
+|Parameter
 |Value
 |Description
 
-|Add HTTP Retry
+|Add HTTP Retry 
 |**Enabled**
 |
 
-|Tents
+|Attempts
 |**5**
 |
 
@@ -215,18 +215,18 @@ image::kiali-configure-latency-retry.png[Kiali - Configure Latency Retry,400]
 vols::
 +
 --
-Dans le {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Services**, `*cliquez sur le service 'flights' ACIA 'Actions' '*`
+Dans le {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Services**, `*cliquez sur le service 'flights' > 'Actions' > 'Request Timeouts'*`
 
-`*Ajouter HTTP Entrée en entrant les paramètres suivants:*`
+`*Ajouter HTTP Retry en entrant les paramètres suivants:*`
 
-.Réglages de rentrée HTTP
+.HTTP Retry Settings
 [%header,cols=3*]
 |===
-|Paramètre
+|Parameter
 |Value
 |Description
 
-|Add HTTP Retry
+|Add HTTP Retry 
 |**Enabled**
 |
 
@@ -234,7 +234,7 @@ Dans le {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Services**
 |**5**
 |
 
-| per Essayez le timeout
+|Per Try Timeout
 |**20ms**
 |
 
@@ -248,26 +248,26 @@ image::kiali-configure-latency-retry.png[Kiali - Configure Latency Retry,400]
 hôtels::
 +
 --
-Dans le {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Services**, `*cliquez sur le service 'hôtels' ACIA 'Actions' '*`
+Dans le {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Services**, `*cliquez sur le service 'hôtels' > 'Actions' > 'Request Timeouts'*`
 
-`*Ajouter HTTP Entrée en entrant les paramètres suivants:*`
+`*Ajouter HTTP Retry en entrant les paramètres suivants:*`
 
-.Réglages de rentrée HTTP
+.HTTP Retry Settings
 [%header,cols=3*]
 |===
-|Paramètre
+|Parameter
 |Value
 |Description
 
-|Add HTTP Retry
+|Add HTTP Retry 
 |**Enabled**
 |
 
-| Tentatives
+|Attempts
 |**5**
 |
 
-|per Essayez le timeout
+|Per Try Timeout
 |**20ms**
 |
 
@@ -281,18 +281,18 @@ image::kiali-configure-latency-retry.png[Kiali - Configure Latency Retry,400]
 assurances::
 +
 --
-Dans le {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Services**, `*cliquez sur le service d'assurances ACIA 'Actions' '*`
+Dans la {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Services**, `*cliquez sur le service d'assurances > 'Actions' > 'Request Timeouts'*`
 
-`*Ajouter HTTP Entrée en entrant les paramètres suivants:*`
+`*Ajouter HTTP Retry en entrant les paramètres suivants:*`
 
-.Réglages de rentrée HTTP
+.HTTP Retry Settings
 [%header,cols=3*]
 |===
-|Paramètre
+|Parameter
 |Value
 |Description
 
-|Add HTTP Retry
+|Add HTTP Retry 
 |**Enabled**
 |
 
@@ -300,7 +300,7 @@ Dans le {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Services**
 |**5**
 |
 
-|per Essayez le timeout
+|Per Try Timeout
 |**20ms**
 |
 
@@ -314,22 +314,22 @@ image::kiali-configure-latency-retry.png[Kiali - Configure Latency Retry,400]
 
 ==  Valider l'amélioration
 
-Retour dans le {GRAFANA_URL}[Chaos Engineering Dashboard], vous pouvez dire que nous parvenons à contenir la propagation de latence de **ne dépassant pas 100 ms en général** en utilisant le modèle Retry tandis que le service 'discounts' a toujours le problème de latence 1s.
+De retour dans le {GRAFANA_URL}[Chaos Engineering Dashboard], vous pouvez dire que nous parvenons à contenir la propagation de la latence en **ne dépassant pas 100ms en général** en utilisant le modèle de nouvelle tentative alors que le service "discounts" a toujours le problème de latence de 1s .
 
 image::grafana-latency-contained-overview.png[Grafana - Latency Contained Overview,900]
 
-Vous pouvez voir plus de détails sur le panneau 'Request Durée' pour le service 'voyages'
+Vous pouvez voir plus de détails sur le panneau 'Request Duration' pour le service 'travels'
 
 image::grafana-latency-contained-details.png[Grafana - Latency Contained Details,900]
 
-==  Retourner l'expérience Chaos
+== Retour arrière de l'expérience Chaos
 
-Il n'y a rien de plus simple que de retourner toutes les configurations que vous avez faites pendant ce laboratoire avec Argo CD.
+Il n'y a rien de plus simple que d'annuler toutes les configurations que vous avez effectuées au cours de ce laboratoire avec Argo CD.
 
 Dans {GITOPS_URL}[Argo CD^, role='params-link'], `*cliquez sur 'Sync > Synchronize '*`.
 
 image::argocd-rollback-sync.png[Argo CD - Sync Application, 900]
 
-Enfin, dans le {GRAFANA_URL}[Chaos Engineering Dashboard], `*s'il vous plaît vérifier que l'application est de retour dans l'état stable*`.
+Enfin, dans le {GRAFANA_URL}[Chaos Engineering Dashboard], `*veuillez vérifier que l'application est de retour à l'état stable*`.
 
 image::grafana-steady-state.png[Grafana - Steady State,700]
