--- a/documentation/modules/ROOT/pages/chaos-timeout_fr.adoc
+++ b/documentation/modules/ROOT/pages/chaos-timeout_fr.adoc
@@ -7,29 +7,27 @@
 :KIALI_URL: https://kiali-istio-system.%APPS_HOSTNAME_SUFFIX%
 :GRAFANA_URL: https://grafana-istio-system.%APPS_HOSTNAME_SUFFIX%
 
-=  1: Injecting Timeout
-
-_XX MINUTE PRACTICE_
+=  Chaos Experiment 1: Injecter un délai d'attente
 
 == TODO
 
-Pour minimiser l'impact de la latence, vous pouvez utiliser le modèle **timeout** qui est probablement le modèle de résilience le plus courant pour les systèmes distribués.
-L'objectif est d'échouer une demande après une certaine période de temps pour éviter le verrouillage de code et de ressources lorsque le service attend une réponse qui prend trop de temps ou qui pourrait ne jamais arriver.
+Pour minimiser l'impact de la latence, vous pouvez utiliser le **modèle de délai d'attente** qui est probablement le modèle de résilience le plus courant pour les systèmes distribués.
+L'objectif est de faire échouer une requête après un certain laps de temps pour éviter le verrouillage du code et des ressources lorsque le service attend une réponse qui prend trop de temps ou qui pourrait ne jamais arriver.
 
-Dans le {KIALI_URL}[Kiali Console^], de la vue **'Services**, `*cliquez sur les 'travels' > Actions' ACIA 'Request Timeouts '*`
+Dans la {KIALI_URL}[Console Kiali^], de la vue **'Services**, `*cliquez sur les 'travels' > 'Actions' > 'Request Timeouts'*`
 
 image::kiali-request-timeout-actions.png[Kiali - Request Timeout Actions,900]
 
 `*Ajouter HTTP Timeout en entrant les paramètres suivants:*`
 
-.Réglages de timeout HTTP
+.HTTP Timeout Settings
 [%header,cols=3*]
 |===
-|Paramètre
+|Parameter
 |Value
 |Description
 
-|Add HTTP Timeout
+|Add HTTP Timeout 
 |**Enabled**
 |
 
@@ -50,35 +48,35 @@ image::grafana-timeout-details-1.png[Grafana - Timeout Details,900]
 
 image::grafana-timeout-details-2.png[Grafana - Timeout Details,900]
 
-Les problèmes de latence ont été corrigés mais le calendrier introduit des erreurs pour les demandes qui dépassent le seuil.
+Les problèmes de latence ont été corrigés, mais le modèle de délai d'attente introduit des erreurs pour les requêtes qui dépassent le seuil.
 `*Faire défiler et voir les paramètres du taux d'erreur*`
 
 image::grafana-timeout-error.png[Grafana - Timeout Error,900]
 
 == TODO
 
-Vous avez mis en œuvre des délais pour le service de voyages.
-Mettons en œuvre une stratégie de retry pour atténuer ces erreurs transitoires.
+Vous avez mis en place des délais d'attente pour le service de voyages.
+Mettons en œuvre une stratégie de nouvelle tentative pour atténuer ces erreurs transitoires.
 
-Dans le {KIALI_URL}[Kiali Console^], de la vue **'Services**,
-`*cliquez sur les "travels" > Actions' ^ 'Request Timeouts' et ajoutez HTTP Retry en entrant les paramètres suivants:*`
+Dans la {KIALI_URL}[Kiali Console^], depuis la vue **'Services'**,
+`*cliquez sur 'travels' > 'Actions' > 'Request Timeouts' et ajoutez HTTP Retry en saisissant les paramètres suivants:*`
 
-.Réglages de rentrée HTTP
+.HTTP Retry Settings
 [%header,cols=3*]
 |===
-|Paramètre
+|Parameter
 |Value
 |Description
 
-|Add HTTP Retry
+|Add HTTP Retry 
 |**Enabled**
 |
 
-|Temps
+|Attempts
 |**3**
 |
 
-|Per Essayez le timeout
+|Per Try Timeout
 |**10ms**
 |
 
@@ -86,6 +84,4 @@ Dans le {KIALI_URL}[Kiali Console^], de la vue **'Services**,
 
 image::kiali-configure-retry.png[Kiali - Configure Retry,400]
 
-`*Retour à {GRAFANA_URL}[Grafana^]*`, vous pouvez dire que le motif de rétry réduit les taux d'erreur sans impacter la latence.
-
-.
+`*De retour à {GRAFANA_URL}[Grafana^]*`, vous pouvez dire que le modèle de nouvelle tentative réduit les taux d'erreur sans impact sur la latence.
