--- a/documentation/modules/ROOT/pages/chaos-latency_fr.adoc
+++ b/documentation/modules/ROOT/pages/chaos-latency_fr.adoc
@@ -179,7 +179,7 @@ Au lieu d'échouer directement ou d'attendre trop longtemps, nous pourrions rée
 
 [tabs]
 ====
-cars::
+Voitures::
 +
 --
 Dans le {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Services**, `*cliquez sur le service 'cars' > Actions' >'Request Timeouts '*`
@@ -212,7 +212,7 @@ image::kiali-configure-latency-retry.png[Kiali - Configure Latency Retry,400]
 `*Cliquez sur le bouton « Mise à jour »*`.
 --
 
-vols::
+Vols::
 +
 --
 Dans le {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Services**, `*cliquez sur le service 'flights' > 'Actions' > 'Request Timeouts'*`
@@ -245,7 +245,7 @@ image::kiali-configure-latency-retry.png[Kiali - Configure Latency Retry,400]
 `*Cliquez sur le bouton « Mise à jour »*`.
 --
 
-hôtels::
+Hôtels::
 +
 --
 Dans le {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Services**, `*cliquez sur le service 'hôtels' > 'Actions' > 'Request Timeouts'*`
@@ -278,7 +278,7 @@ image::kiali-configure-latency-retry.png[Kiali - Configure Latency Retry,400]
 `*Cliquez sur le bouton « Mise à jour »*`.
 --
 
-assurances::
+Assurances::
 +
 --
 Dans la {KIALI_URL}[Kiali Console^, role='params-link'], de la vue **'Services**, `*cliquez sur le service d'assurances > 'Actions' > 'Request Timeouts'*`
